# pathwellconnect

./: .gitignore  HOW_TO_CHECK_HEALTH.md  NEXT_STEPS.md  QUICK_START.md  README.md  RUN_SERVICES.md  STATUS.md  TESTING.md  check-health.sh  test_full_flow.py
.devcontainer/: devcontainer.json
ReferenceDocs/: AGPS - The Four Horsemen of the Trust Fabric.docx  AnchorTrust Holdings_PathwellConnect_Provisional_Patent Attribution Edge November 21 2025.docx  AnchorTrust Holdings_PathwellConnect_Provisional_Patent Hardware Agnostic Attribution NOV2.docx  AnchorTrustHoldings_PathwellConnect_Trademarks11.docx  PATHWELL CONNECT Protocol Series  - The ECON ROY Whitepaper  - The Economic Engine v2.docx  PATHWELL CONNECT Protocol Series  - The Sovereign Override Layer Whitepaper v2.docx  PATHWELL CONNECT Protocol Series  - The TREATY.OBJ Whitepaper - The Diplomatic Toolkit v2.docx  PATHWELL CONNECT Protocol Series The Ghost Attribution Layer Whitepaper v2.docx  pathwell_governance_v3.jsx
dashboard/: .env.local.example  Dockerfile  package-lock.json  package.json  tailwind.config.js
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: AppShell.tsx  Header.tsx  Providers.tsx  Sidebar.tsx  TenantSelector.tsx
dashboard/src/contexts/: TenantContext.tsx
dashboard/src/hooks/: useTraces.ts
dashboard/src/lib/: api.ts  types.ts
demo_app/: app.py  data_loader.py  requirements.txt
infrastructure/: README.md  docker-compose.yml
pathwell_connect_dbt/: dbt_project.yml
pathwell_connect_dbt/models/core/: ledger_edges.sql  ledger_nodes.sql  nodes_charges.sql  nodes_events.sql  (+5 more)
pathwell_connect_dbt/seeds/: raw_audit_charges.csv  raw_audit_invoices.csv  raw_erp_orders.csv  raw_ledger_edges.csv  raw_locations.csv  raw_parties.csv  raw_risk_events.csv  raw_tms_events.csv  raw_tms_shipments.csv  raw_visibility_events.csv
sdks/go/: README.md  go.mod
sdks/python/: README.md  setup.py
sdks/typescript/: README.md  package.json
services/identity-registry/: Cargo.toml  Dockerfile  README.md
services/identity-registry/.claude/: settings.local.json
services/identity-registry/migrations/: 001_initial_schema.sql  002_phase1_enhancements.sql
services/identity-registry/src/: main.rs
services/identity-registry/src/api/: handlers.rs  mod.rs  models.rs  routes.rs  tenant_handlers.rs  trust_handlers.rs
services/identity-registry/src/db/: mod.rs  models.rs
services/identity-registry/src/pki/: mod.rs
services/policy-engine/: Cargo.toml  Dockerfile  Dockerfile.wrapper  README.md
services/policy-engine/policies/: data.json  pathwell.rego  pathwell_v2.rego
services/policy-engine/src/: api.rs  engine.rs  main.rs
services/proxy-gateway/: Cargo.toml  Dockerfile  README.md
services/proxy-gateway/src/: config.rs  identity_client.rs  interceptor.rs  main.rs  policy_client.rs  receipt_client.rs
services/receipt-store/: Cargo.toml  Dockerfile  README.md
services/receipt-store/migrations/: 001_receipts_table.sql  002_intelligent_ledger.sql  003_phase1_enhancements.sql
services/receipt-store/scripts/: seed_demo.sql
services/receipt-store/src/: api.rs  db.rs  kafka_producer.rs  main.rs  queries.rs  receipt.rs  s3_archiver.rs  store.rs
src/: attribution_engine.py  test_attribution.py
tests/: README.md  integration_test.py  load_test.py
(+29 files in other folders)
